problem: filter row is not finished. Besides that common files are ready

--- a/common/footer.html
+++ b/common/footer.html
@@ -1,4 +1,4 @@
 <div class="footer-container">
     <hr class="footer-separator"/>
-    <span class="footer-text">FAVORITE PAPERS</span>
+    <span class="footer-text">MUSIC HOUSE</span>
 </div>
